# dszero-landing-page

./: .firebaserc  .gitignore  .prettierrc  README.md  app.py  jsconfig.json  package-lock.json  package.json  privacy-policy.md  pyproject.toml  serving.py  tailwind.config.js  terms-of-service.md  utils.py
.firebase/: hosting.YnVpbGQ.cache  hosting.b3V0.cache  hosting.cHVibGlj.cache
app/: layout.jsx  page.jsx
app/about/: layout.jsx  page.jsx
app/components/layout/: footer.jsx  header.jsx
app/components/ui/: ContactButton.jsx  NavLink.jsx
app/contact/: page.jsx
app/posts/: page.jsx
app/posts/[...slug]/: page.jsx
app/posts/[slug]/: page.jsx
content/: hello-world.mdx
lib/: posts.js
public/: index.html
src/: App.js
src/app/: layout.tsx  page.tsx
src/assets/images/: setmore_cover.xcf
src/assets/scripts/: Grid.js  Orbit.js  ScatterPlot.js  hero_logo.ipynb
src/assets/styles/: Header.css  HeroSection.css  PortfolioPage.css  PortfolioSection.css  Services.css  globals.css
src/components/common/: Header.js  ScrollToTop.js
src/components/home/: HeroSection.js  PortfolioSection.js  Services.js
src/components/portfolio/: PortfolioItemPage.js
src/components/portfolio/projects/: clustering-project-metadata.js  regression-project-metadata.js  webdev-project-metadata.js  webdev-project.js
src/components/portfolio/projects/deprec/: classification-project-metadata.js  (+3 more)
src/content/: portfolioItems.js
src/scripts/: generatePortfolioItems.js
src/services/: firebase.js
src/utils/: navigateAndLog.js
src/views/: ContactPage.js  HomePage.js
